# french_towns_lakehouse

./: .dockerignore  .env.example  .envrc.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  about.html  config.yaml  dev.duckdb  docker-compose.yml  engineering.html  index-listing.json  index.feed-full-staged  index.html  index.xml  insights.html  listings.json  prefect.yaml  pyproject.toml  robots.txt  search.json  setup_polaris.py  sitemap.xml
.github/workflows/: blog.yml  dbt_docs.yml  lint.yml  security.yml  tests.yml
.opencode/plans/: refactor_stage_files.md
.prefect/deployments/: deployments.yaml
audit/: README.md
blog/: .gitignore  _quarto.yml  about.qmd  blog_utils.py  engineering.qmd  index.qmd  insights.qmd
blog/_site/: about.html  engineering.html  index.html  index.xml  insights.html  listings.json  search.json  sitemap.xml
blog/dashboards/: index.qmd
custom_parsers/: __init__.py  parse_ville_sportive.py
dashboards/: index.html
dashboards/departments/: index.html
data_sources/dim_calendar/: french_holidays.csv  french_legislatures.csv  french_presidents.csv  french_prime_ministers.csv  generate_holidays.py  generate_lunar_dimension.py  lunar_phases.csv  market_holidays.csv  political_context.csv  religious_holidays.csv  timeline_to_csv.py  timelines.yaml
data_sources/dim_criminality_indicateur/: dim_criminality_indicateur.csv
data_sources/dim_equipment/: dim_equipment.csv
data_sources/dim_source/: bridge_model_sources.csv  generate_sources.py  sources.csv
data_sources/filosofi_income/: README.md
data_sources/overseas_population/: README.md  overseas_population.csv
docker/: docker-compose-minio.yml  docker-compose-polaris.yml  docker-compose-postgres.yml  init-postgres.sh
docs/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
exploration_notebooks/: explore_data.ipynb
flows/: README.md  french_towns_pipeline.py  integration_pipeline.py  partial_parsers_pipeline.py  partial_scrapers_pipeline.py  staging_pipeline.py  transformation_pipeline.py
flows/integration/: README.md
flows/scrapers/: __init__.py  __main__.py
flows/shared/: __init__.py  audit.py  config.py  dbt.py  download.py  logging.py  minio.py  models.py  staging_base.py
flows/staging/: staging_current_demographics.py  staging_current_geography.py  staging_current_labels.py
flows/transformation/: transformation_current_dim_geography.py  transformation_current_fact_demographics.py  transformation_current_labels.py
flows_integration/integration/: README.md  integration_current_criminality.py  integration_current_cultural_heritage.py  integration_current_dim_calendar.py  integration_current_dim_geography.py  integration_current_fact_demographics.py  integration_current_fact_equipment.py  integration_current_fact_income.py  integration_current_fact_unemployment.py  integration_current_labels.py  integration_current_source_provenance.py
flows_integration/shared/: connection.py  fact_loader.py  scd2.py  validation.py
flows_staging/custom_parsers/: README.md  __init__.py  parse_ville_sportive.py
flows_staging/scrapers/: __init__.py  __main__.py  models.py  scrape_famille_plus.py  scrape_petites_cites.py  scrape_plus_beaux_villages.py  scrape_village_etape.py  scrape_villes_fleuries.py  scrape_villes_prudentes.py  utils.py
flows_staging/shared/: __init__.py  audit.py  audit_db.py  config.py  dbt.py  download.py  minio.py  models.py  staging_base.py
flows_staging/staging/: README.md  staging_arrondissements.py  staging_births.py  staging_cog_ensemble.py  staging_criminality.py  staging_current_demographics.py  staging_deaths.py  (+20 more)
french_towns_dbt/: .gitignore  .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
generate_reports/: cli.py  config.py  queries.py  renderer.py  tables.py  utils.py
migrations/:  001_add_flow_run_metadata.sql   001_init_metadata_tables.sql  002_add_file_audit.sql  002_add_file_metadata.sql
scrapers/: __init__.py  __main__.py  logging.py  models.py  scrape_famille_plus.py  scrape_petites_cites.py  scrape_plus_beaux_villages.py  scrape_village_etape.py  scrape_villes_fleuries.py  scrape_villes_prudentes.py  utils.py
scripts/: compute_altitude_stats.py  deploy_flows.sh  download.py  download_bdalti.py  download_filosofi_income.py  drop_polaris_tables.py  init_db.py  init_duckdb.sql.template  prefect.yaml  refresh_dashboards_data.sh  refresh_lakehouse_views.sh  render_blog.sh  upload_criminality.py  upload_island_communes.py
seeds/: seed_insee_emploi_sources.csv
sql/: transform_french_towns.sql  transform_population.sql  transform_salaries.sql
tests/: conftest.py  test_generate_reports.py
utils/: db.py
(+375 files in other folders)
