[project]
name = "french-towns-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.51",
    "clear>=2.0.0",
    "cryptography>=46.0.5",
    "dbt-core>=1.11.6",
    "dbt-duckdb>=1.10.1",
    "deepdiff>=8.6.1",
    "duckdb>=1.4.4",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "owslib>=0.35.0",
    "pandas>=3.0.0",
    "pdfplumber>=0.11.9",
    "prefect>=3.6.17",
    "pyarrow>=23.0.1",
    "pygments>=2.19.2",
    "pyproj>=3.7.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "ipykernel>=7.2.0",
    "polars>=1.40.1",
    "matplotlib>=3.10.9",
    "altair>=5.0.0",
    "weasyprint>=60.0",
    "vl-convert-python>=1.0.0",
    "tqdm>=4.66.0",
    "great-tables>=0.21.0",
    "itables>=2.7.3",
    "plotly>=6.8.0",
    "holidays>=0.99",
    "exchange-calendars>=4.13.2",
    "lunarcalendar>=0.0.9",
    "astral>=3.2",
    "pdf2image>=1.17.0",
    "xlrd>=2.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "vulture>=2.16",
    "pip-audit>=2.10.0",
    "ty>=0.0.29",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "integration: marks tests that require external services (e.g., Prefect API)",
]
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "PTH",  # pathlib (discourages os.path.join, open(), etc.)
    "B",    # flake8-bugbear (best practices)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "PL",   # Pylint
    "N",    # pep8-naming
]
ignore = [
    "E501",           # line too long (handled by formatter)
    "PLR0913",        # too many arguments
    "PLR2004",        # magic values in comparisons
]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
where = ["."]
include = ["flows*", "scrapers*", "custom_parsers*"]

[tool.ty.rules]
no-matching-overload = "ignore"
not-iterable = "ignore"
invalid-return-type = "ignore"
not-subscriptable = "ignore"

[tool.ty.src]
exclude = [
    "tests/**",
]
